# institutional-books-1-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  download_single_book.py  install.sh  pipeline.py  pyproject.toml  test_hf_access.py
commands/analyze/: __init__.py  extract_genre_classification_from_metadata.py  extract_genre_from_metadata.py  extract_hathitrust_rights_determination.py  extract_main_language_from_metadata.py  extract_ocr_quality_from_metadata.py  extract_page_count.py  extract_topic_classification_from_metadata.py  extract_topic_classification_training_dataset.py  extract_topic_from_metadata.py  extract_year_of_publication_from_metadata.py  main_language_from_metadata.py  page_count.py  run_language_detection.py  run_ocr_quality_detection.py  run_page_count.py  run_simhash.py  run_text_analysis.py  run_token_count.py  run_topic_classification.py  token_count.py  topic_classification_from_metadata.py  year_of_publication.py
commands/analyze/deduplication/: __init__.py  step01_get_simhash.py  step02_export_simhash_eval_sheet.py
commands/analyze/genre_classification/: __init__.py  step01_extract_from_metadata.py
commands/analyze/language/: __init__.py  step01_extract_from_metadata.py  step02_detect.py
commands/analyze/ocr_quality/: __init__.py  step01_extract_from_metadata.py  step02_detect.py
commands/analyze/topic_classification/: __init__.py  step01_extract_from_metadata.py
commands/export/: __init__.py
commands/export/csv/: __init__.py  deduplication_evaluation_sheet.py  overview.py  random_ocr_text_chunks.py  simplified_source_metadata.py  table.py  topic_classification_training_dataset.py
commands/export/misc/: __init__.py  deduplication_evaluation_sheet.py  simplified_source_metadata.py  topic_classification_training_dataset.py
commands/export/raw/: __init__.py
commands/export/stats/: __init__.py  overview.py
commands/export/viz/: __init__.py
commands/process/: __init__.py  generate_layout_aware_text.py
commands/process/layout_aware_text/: __init__.py  step01_extract_layout_data.py  step02_identify_complex_layouts.py  step03_assemble_spans.py  step04_sort_spans.py
commands/process/ocr_postprocessing/: __init__.py  step01_generate_training_dataset.py  step02_train_and_evaluate_model.py  step03_process.py
commands/publish/: __init__.py
commands/publish/hf/: __init__.py  check_integrity.py  generate.py  push.py
commands/setup/: __init__.py  build.py  clear.py  status.py
const/: __init__.py
docs/: japanese_book_processing.md
models/: __init__.py  book_io.py  genre_classification.py  hathitrust_rights_determination.py  language_detection.py  layout_aware_text.py  layout_data.py  main_language.py  ocr_postprocessing_text_analysis.py  ocr_postprocessing_training_dataset.py  ocr_quality.py  page_count.py  scanned_text_simhash.py  text_analysis.py  token_count.py  topic_classification.py  topic_classification_training_dataset.py  year_of_publication.py
utils/: __init__.py  check_env.py  data_dependencies.py  get_batch_max_size.py  get_cache.py  get_db.py  get_filtered_duplicates.py  get_metadata_as_text_prompt.py  get_s3_client.py  get_simhash_features.py  get_simhash_shingles.py  get_torch_devices.py  is_pd.py  make_dirs.py  pipeline_readiness.py  process_db_write_batch.py
