[project]
name = "institutional-books-1-pipeline"
version = "0.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.4.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "aiohappyeyeballs==2.4.6 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "aiohttp==3.11.13 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "aiosignal==1.3.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "annotated-types==0.7.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "anyio==4.8.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "attrs==25.1.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "beautifulsoup4==4.13.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "black>=25.1.0",
    "boto3==1.37.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "botocore==1.37.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "certifi==2025.1.31 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "cffi==1.17.1 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_python_implementation == 'PyPy'",
    "charset-normalizer==3.4.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "click==8.1.8 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "colorama==0.4.6 ; python_full_version >= '3.11' and python_full_version < '3.13' and sys_platform == 'win32'",
    "datasets==3.5.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "dill==0.3.8 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "diskcache==5.6.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "filelock==3.17.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "frozenlist==1.5.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "fsspec[http]==2024.12.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "greenlet==3.1.1 ; (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'AMD64') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'WIN32') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'aarch64') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'amd64') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'ppc64le') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'win32') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64')",
    "h11==0.14.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "httpcore==1.0.7 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "httpx==0.28.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "huggingface-hub==0.31.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "humanize==4.12.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "idna==3.10 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "iso639-lang==2.6.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "jinja2==3.1.5 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "jmespath==1.0.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "joblib==1.4.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "jsonpatch==1.33 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "jsonpointer==3.0.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "langchain==0.3.19 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "langchain-core==0.3.39 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "langchain-text-splitters==0.3.6 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "langsmith==0.3.10 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "lightning==2.5.1.post0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "lightning-utilities==0.14.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "loguru>=0.7.3",
    "lxml==5.4.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "markdown-it-py==3.0.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "markupsafe==3.0.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "mdurl==0.1.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "model2vec[train]==0.5.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "more-itertools==10.6.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "morfessor==2.0.6 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "mpmath==1.3.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "multidict==6.1.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "multiprocess==0.70.16 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "networkx==3.4.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "numpy==1.26.4 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "nvidia-cublas-cu12==12.4.5.8 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.2 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "ocroscope ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "ollama==0.4.8 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "opencv-python==4.11.0.86 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "orjson==3.10.16 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "packaging==24.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pandas==2.2.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "peewee==3.17.9 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pillow==11.1.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "polyglot==16.7.4 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "propcache==0.3.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "protobuf==5.29.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "psutil==7.0.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pyarrow==19.0.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pycld2==0.41 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pycparser==2.22 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_python_implementation == 'PyPy'",
    "pydantic==2.10.6 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pydantic-core==2.27.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pyfranc==0.2.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pygments==2.19.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pyicu==2.14 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "python-dotenv==1.0.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "python-slugify==8.0.4 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pytorch-lightning==2.5.1.post0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pytz==2025.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "pyyaml==6.0.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "regex==2024.11.6 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "requests==2.32.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "requests-toolbelt==1.0.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "rich==14.0.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "s3transfer==0.11.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "safetensors==0.5.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "scikit-learn==1.6.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "scipy==1.15.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "sentencepiece==0.2.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "setuptools==75.8.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "simhash==2.1.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "six==1.17.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "skops==0.11.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "sniffio==1.3.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "soupsieve==2.6 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "sqlalchemy==2.0.38 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "sympy==1.13.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "tabulate==0.9.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "tenacity==9.0.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "text-unidecode==1.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "threadpoolctl==3.5.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "tiktoken==0.9.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "tokenizers==0.21.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "torch==2.6.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "torchmetrics==1.7.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "torchvision==0.21.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "tqdm==4.67.1 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "transformers==4.50.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "triton==3.2.0 ; python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "tzdata==2025.2 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "urllib3==2.3.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "xxhash==3.5.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "yarl==1.18.3 ; python_full_version >= '3.11' and python_full_version < '3.13'",
    "zstandard==0.23.0 ; python_full_version >= '3.11' and python_full_version < '3.13'",
]

[tool.uv.sources]
ocroscope = { git = "https://github.com/Pleias/OCRoscope.git", rev = "cb37caafbc8c6fd4c71d20f2b415011c07c18d46" }

[tool.black]
line-length = 100
